Correct code syntax highlighting overflow style

--- a/css/style.sass
+++ b/css/style.sass
@@ -36,7 +36,7 @@ nav
   margin-top: 1rem
   span
     font-size: $cfs
-    margin-right: 1rem
+    margin-right: 0.5rem
 
 date
   display: block
@@ -52,6 +52,7 @@ p > code
 
 .highlight
   margin-top: 1.5rem
+  overflow: scroll
 
 .gl
   color: #75715e
@@ -60,7 +61,6 @@ pre
   font-size: $cfs
   line-height: $cfs * 1.5
   padding: 0.8rem 1rem
-  overflow: scroll
 
 
 #disqus
